# bunker

./: .env.example  .gitignore  DistributionOfCards.py  check_capacity_player.py  count_game.py  disasters.json  graph.py  main.py  nodes.py  pyproject.toml  requirements.txt  roles.json  rules-human.md  state.py  user.py
Files/: rules.md
bunker/: __init__.py  __main__.py  cards.py  config.py  console.py  flow.py  graph.py  llm.py  main.py  nodes.py  prompts.py  schemas.py  state.py
bunker/web/: __init__.py  __main__.py  serialize.py  server.py  session.py
bunker/web/static/: app.js  index.html  styles.css
data/: catastrophes.json
data/cards/: baggage.json  biology.json  fact.json  health.json  hobby.json  profession.json
