[project]
name = "bunker-game"
version = "0.1.0"
description = "Демо социально-дедуктивной игры «Бункер» с LLM-агентами и живым игроком на LangChain/LangGraph."
requires-python = ">=3.12,<3.14"
# Точные версии зафиксированы (==) и продублированы в uv.lock.
dependencies = [
    "langchain==1.3.11",
    "langchain-core==1.4.8",
    "langchain-openai==1.3.3",
    "langgraph==1.2.8",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.2",
]

[project.scripts]
bunker = "bunker.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bunker"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# E/F — pycodestyle+pyflakes, I — isort, N — pep8-naming, UP — pyupgrade,
# B — bugbear, D — pydocstyle (docstrings), SIM — flake8-simplify.
select = ["E", "F", "I", "N", "UP", "B", "D", "SIM"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true

[dependency-groups]
dev = [
    "ruff==0.15.20",
]
