[project]
name = "bunker-game"
version = "0.1.0"
description = "Игра Бункер с LLM-агентами и живым игроком на LangChain."
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.139.0",
    "langchain==1.3.11",
    "langchain-core==1.4.8",
    "langchain-openai==1.3.3",
    "langgraph==1.2.8",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.2",
    "uvicorn[standard]>=0.51.0",
]

[project.scripts]
bunker = "bunker.main:main"
bunker-web = "bunker.web.server:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bunker"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# E/F — pycodestyle+pyflakes, I — isort, N — pep8-naming, UP — pyupgrade,
# B — bugbear, D — pydocstyle (docstrings), SIM — flake8-simplify.
select = ["E", "F", "I", "N", "UP", "B", "D", "SIM"]
# D417 требует описывать аргументы в docstring — секции Args/Returns не используем.
ignore = ["D417"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true

[dependency-groups]
dev = [
    "ruff==0.15.20",
]
